# zed-xquery

./: .gitignore  Cargo.toml  README.md  extension.toml
languages/xquery/: config.toml  outline.scm
lsp-server/: Cargo.toml
lsp-server/src/: main.rs
src/: lib.rs
