[package]
name = "xquery-lsp-server"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "xquery-lsp-server"
path = "src/main.rs"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.95"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
regex = "1"
